@@ -1,3 +1,14 @@
+2000-05-29  OKUJI Yoshinori  <okuji@gnu.org>
+
+	Based on a patch by Neal H Walfield <neal@walfield.org>:
+	* netboot/misc.c [GRUB] (inet_aton): Defined.
+	* netboot/main.c (arp_server_override): New function.
+	* netboot/etherboot.h [GRUB] (arp_server_override): Declared.
+	(inet_aton): Likewise.
+	* stage2/builtins.c (tftpserver_func): New function.
+	(builtin_tftpserver): New variable.
+	(builtin_table): Added a pointer to BUILTIN_TFTPSERVER.
+	
 2000-05-28  OKUJI Yoshinori  <okuji@gnu.org>
 
 	* stage2/asm.S (codestart): Fix a typo: DISKLESS_SUPPORT ->
